fix some layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -50,3 +50,9 @@ main,
     }
   }
 }
+
+.bottom-nav-list {
+  margin-top: auto;
+  margin-bottom: .8rem;
+  padding: .6rem;
+}
