--- a/src/app/app.component.scss-theme.scss
+++ b/src/app/app.component.scss-theme.scss
@@ -14,6 +14,13 @@
 
   .app-shell-sidenav {
     background-color: mat-color($background, side-bar);
+
+    .mat-drawer-inner-container {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .workspace-nav-list {
